apps/whisper/whisper-deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: whisper
  namespace: ai 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whisper
  template:
    metadata:
      labels:
        app: whisper
  spec:
    containers:
      - name: whisper
        image: hhector16/whisper-ai:0.1
        imagePullPolicy: Always

        ports:
          - containerPort: 8000

        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"

          limits:
            cpu: "2"
            memory: "2Gi"

        livenessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 20

        readinessProbe:
          httpGet:
            path: /docs
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
