apps/whisper/whsiper-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyAll-policy
  namespace: ai
spec:
  podSelector:
    matchLabels:
      app: whisper
  policyTypes:
    - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-whisper-policy
  namespace: ai
spec:
  podSelector:
    matchLabels:
      app: whisper
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: go-puller
      ports:
        - protocol: TCP
          port: 8000
